--- a/index.html
+++ b/index.html
@@ -1910,6 +1910,7 @@ let currentConsumoData = null;
 let currentConsumoAddress = '';
 let currentConsumoLat = 0;
 let currentConsumoLng = 0;
+let currentConsumoBaseIncome = null; // Renda base do município (não calculada)
 
 // Funções de Abas
 function switchTab(tabName) {
@@ -2010,6 +2011,7 @@ async function displayConsumoAnalysis(lat, lng, address) {
         currentConsumoAddress = address;
         currentConsumoLat = lat;
         currentConsumoLng = lng;
+        currentConsumoBaseIncome = rendaReal; // Armazenar renda base do município
         renderConsumoAnalysis(consumoData);
     } catch (error) {
         console.error('Erro ao processar análise de consumo:', error);
@@ -2578,8 +2580,9 @@ function updateBestOpportunity(data) {
 // Função para atualizar dados conforme o raio selecionado
 function updateConsumoRadius(radius) {
     if (!currentConsumoData) return;
-    const rendaAtual = currentConsumoData.avgFamilyIncome;
-    const newData = generateConsumoData(null, radius, rendaAtual);
+    // Usar a renda BASE do município, não a renda calculada do raio anterior
+    const newData = generateConsumoData(null, radius, currentConsumoBaseIncome);
+    currentConsumoData = newData; // Atualizar dados atuais
     renderConsumoAnalysis(newData);
 }
 
