--- a/index.html
+++ b/index.html
@@ -1911,6 +1911,7 @@ let currentConsumoAddress = '';
 let currentConsumoLat = 0;
 let currentConsumoLng = 0;
 let currentConsumoBaseIncome = null; // Renda base do município (não calculada)
+let currentConsumoAddressIncome = null; // Renda específica do endereço/bairro pesquisado
 
 // Funções de Abas
 function switchTab(tabName) {
@@ -1930,7 +1931,14 @@ function switchTab(tabName) {
     event.target.classList.add('active');
 }
 
-// Dados de renda média familiar por município (IBGE 2022)
+// Dados de renda média familiar por município (IBGE 2022) e por bairro de Fortaleza (IPECE 2022)
+const rendaPorBairroFortaleza = {
+    'guararapes': 14775.21, 'cocó': 13372.43, 'de lourdes': 12383.27, 'meireles': 12148.10, 'aldeota': 10572.06, 'dionísio torres': 10489.85,
+    'parque iracema': 8211.16, 'mucuripe': 8100.20, 'centro': 3500, 'praia de iracema': 3200, 'bairro de fátima': 3100,
+    'canindezinho': 1343.37, 'bom jardim': 1342.03, 'conjunto palmeiras': 1357.92, 'parque presidente vargas': 1381.01,
+    'granja lisboa': 1404.64, 'pirambu': 1405.69, 'genibaú': 1272.25
+};
+
 const rendaPorMunicipio = {
     'fortaleza': 2850, 'caucaia': 1950, 'maracanaú': 2100, 'maranguape': 2050, 'aquiraz': 2200, 'eusébio': 2400, 'pacajus': 1850, 'itaitinga': 1950, 'são gonçalo do amarante': 1900, 'canindé': 1650,
     'são paulo': 3850, 'guarulhos': 2950, 'campinas': 3200, 'santos': 3100, 'sorocaba': 2850, 'ribeirão preto': 3400, 'são bernardo do campo': 3100, 'são josé dos campos': 3300,
@@ -1945,6 +1953,34 @@ const rendaPorMunicipio = {
     'campo grande': 2900, 'dourados': 2400, 'três lagoas': 2200,
     'cuiabá': 2800, 'várzea grande': 2400, 'rondonópolis': 2200, 'sinop': 2100
 };
+
+function getRendaPorBairroFortaleza(bairro) {
+    const bairroLower = bairro.toLowerCase().trim();
+    if (rendaPorBairroFortaleza[bairroLower]) return rendaPorBairroFortaleza[bairroLower];
+    for (const [key, value] of Object.entries(rendaPorBairroFortaleza)) {
+        if (bairroLower.includes(key) || key.includes(bairroLower)) return value;
+    }
+    return null;
+}
+// Função para buscar bairro a partir de coordenadas usando Nominatim
+async function getBairroFromCoordinates(lat, lng) {
+    try {
+        const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lng}&zoom=18&addressdetails=1`);
+        const data = await response.json();
+        if (data.address && data.address.suburb) {
+            return data.address.suburb;
+        } else if (data.address && data.address.neighbourhood) {
+            return data.address.neighbourhood;
+        } else if (data.address && data.address.village) {
+            return data.address.village;
+        }
+        return null;
+    } catch (error) {
+        console.error('Erro ao buscar bairro:', error);
+        return null;
+    }
+}
+
 
 function getRendaPorMunicipio(municipio) {
     const municipioLower = municipio.toLowerCase().trim();
@@ -1992,26 +2028,56 @@ async function displayConsumoAnalysis(lat, lng, address) {
             }
         }
         let rendaReal = null;
+        let bairroInfo = null;
         if (cepMatch) {
             const cep = cepMatch[0].replace('-', '');
             const cepResponse = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
             const cepData = await cepResponse.json();
             if (cepData.localidade) {
-                rendaReal = getRendaPorMunicipio(cepData.localidade);
+                if (cepData.localidade.toLowerCase() === 'fortaleza' && cepData.bairro) {
+                    const rendaBairro = getRendaPorBairroFortaleza(cepData.bairro);
+                    if (rendaBairro) {
+                        rendaReal = rendaBairro;
+                        bairroInfo = cepData.bairro;
+                    } else {
+                        rendaReal = getRendaPorMunicipio(cepData.localidade);
+                    }
+                } else {
+                    rendaReal = getRendaPorMunicipio(cepData.localidade);
+                }
             }
         } else {
             const parts = address.split(',');
             if (parts.length > 0) {
                 const municipio = parts[parts.length - 1].trim();
-                rendaReal = getRendaPorMunicipio(municipio);
+                if (municipio.toLowerCase() === 'fortaleza') {
+                    const bairroFromCoords = await getBairroFromCoordinates(lat, lng);
+                    if (bairroFromCoords) {
+                        const rendaBairro = getRendaPorBairroFortaleza(bairroFromCoords);
+                        if (rendaBairro) {
+                            rendaReal = rendaBairro;
+                            bairroInfo = bairroFromCoords;
+                        } else {
+                            rendaReal = getRendaPorMunicipio(municipio);
+                        }
+                    } else {
+                        rendaReal = getRendaPorMunicipio(municipio);
+                    }
+                } else {
+                    rendaReal = getRendaPorMunicipio(municipio);
+                }
             }
         }
         const consumoData = generateConsumoData(municipalityData, 2000, rendaReal);
+        // Garantir que a renda base seja armazenada para uso nos raios posteriores
         currentConsumoData = consumoData;
         currentConsumoAddress = address;
         currentConsumoLat = lat;
         currentConsumoLng = lng;
-        currentConsumoBaseIncome = rendaReal; // Armazenar renda base do município
+        currentConsumoBaseIncome = rendaReal; // Armazenar renda base do bairro/município
+        currentConsumoAddressIncome = rendaReal; // Armazenar renda do endereço pesquisado
+        console.log("DEBUG - Renda do endereço:", rendaReal, "Bairro:", bairroInfo);
+        if (bairroInfo) consumoData.bairro = bairroInfo;
         renderConsumoAnalysis(consumoData);
     } catch (error) {
         console.error('Erro ao processar análise de consumo:', error);
@@ -2024,6 +2090,7 @@ function generateConsumoData(municipalityData, radius = 2000, rendaReal = null) 
     const baseFamilies = 8000;
     const families = Math.round(baseFamilies * radiusMultiplier + (Math.random() * baseFamilies * 0.2));
     const baseIncome = rendaReal ? rendaReal : (1800 + Math.random() * 4200);
+    console.log("generateConsumoData - Raio:", radius, "Renda Real:", rendaReal, "Base Income:", baseIncome, "Famílias:", families);
     const incomeDist = calculateIncomeDistributionByBase(baseIncome);
     const distForRadius = radius === 2000 ? incomeDist.income2km : radius === 5000 ? incomeDist.income5km : incomeDist.income8km;
     const avgIncome = calculateAvgIncomeFromDistribution(distForRadius);
@@ -2103,8 +2170,10 @@ function calculateAvgIncomeFromDistribution(incomeDistribution) {
 }
 
 function renderConsumoAnalysis(data) {
+    const bairroText = data.bairro ? `<p style="color: #007C27; font-weight: bold; margin-bottom: 15px;">📍 Bairro: ${data.bairro}</p>` : '';
     const html = `
         <div style="margin-bottom: 20px;">
+            ${bairroText}
             <h3 style="color: #00512A; margin-bottom: 10px;">Selecione o raio de análise:</h3>
             <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                 <button onclick="updateConsumoRadius(2000)" style="padding: 10px 20px; background: ${data.radiusKm === 2 ? '#007C27' : 'white'}; color: ${data.radiusKm === 2 ? 'white' : '#007C27'}; border: 2px solid #007C27; border-radius: 6px; cursor: pointer; font-weight: bold;">2 km</button>
@@ -2580,8 +2649,10 @@ function updateBestOpportunity(data) {
 // Função para atualizar dados conforme o raio selecionado
 function updateConsumoRadius(radius) {
     if (!currentConsumoData) return;
-    // Usar a renda BASE do município, não a renda calculada do raio anterior
-    const newData = generateConsumoData(null, radius, currentConsumoBaseIncome);
+    // Usar a renda do endereço pesquisado (bairro ou município)
+    const rendaParaUsar = currentConsumoAddressIncome || currentConsumoBaseIncome || 2850;
+    console.log("DEBUG - updateConsumoRadius - Renda:", rendaParaUsar, "Raio:", radius);
+    const newData = generateConsumoData(null, radius, rendaParaUsar);
     currentConsumoData = newData; // Atualizar dados atuais
     renderConsumoAnalysis(newData);
 }
